# conector-HTTP-Generico

./: README.md  SKILL.md  manifest.json  test_connection.py  validate_local.py
docs/: FUNCIONES.md  index.html
lib/: pyproject.toml
lib/ruvic_http_generic_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
