[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-http-generic-connector"
version = "1.0.0"
description = "Conector Ruvic genérico para cualquier API REST, con auth configurable (none/basic/bearer/api_key) y protección SSRF incorporada"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_http_generic_connector*"]
